--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>Document</title>
+
+	<link href="common.css" rel="stylesheet"/>
+	<link href="index.css" rel="stylesheet"/>
 </head>
 <body>
 	<div id="app"></div>
